--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
   <body>
     <div id="root"></div>
 
-    <!-- Vite React entry -->
-    <script type="module" src="/src/index.tsx"></script>
+    <!-- Vite React entry (root-level index.tsx) -->
+    <script type="module" src="./index.tsx"></script>
 
     <!-- Iframe Resizer -->
     <script src="https://cdn.jsdelivr.net/npm/iframe-resizer/js/iframeResizer.contentWindow.min.js"></script>
   </body>
 </html>
+
